2004-09-06  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* dispatch.adb, dispatch_method.adb, dispatch_vh.adb, dispatch_vh.out,
	  sock2_proc.adb, tcom.adb:
	Use Get_Free_Port.

	* sockext_proc.adb:
	Fix comment.

2004-08-25  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* disp_soap_proc.adb, file2.adb, sessions.adb, sessions2.adb,
	  sessions3.adb, sessions4.adb:
	Close client connection after use.

2004-08-24  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_STD): Add upload4.

	* upload.adb:
	(Server): Set Upload_Directory to "./".

	* upload4.adb:
	Use Get_Free_Port.

2004-08-24  Pascal Obry  <pascal@obry.org>

	* upload4.adb, upload4.out:
	Initial revision.

2004-08-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* test_soap5_sec.adb, test_soap5_sec.out, makefile:
	Add security version of the test_soap5.adb regression test.

	* test_soap5_pack.ads, test_soap5_pack.adb:
	Common code for test_soap5 and test_soap5_sec regtession tests.
	Close persistent client connection after use.

	* test_soap5.adb:
	Use test_soap5_pack package.

2004-08-21  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* test_soap5.adb:
	Use Get_Free_Port.

2004-08-13  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* strm.adb, user_strm.adb:
	Make compressed stream last chunk size less then 4 bytes.

	* hload_pack.adb:
	(Stamp): Remove unnecessary Last initialization.

2004-08-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* hload_pack.adb:
	(Client): Close client connection at the end.

2004-08-11  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* hload.adb, hload_pack.ads, hload_pack.adb, hload_sec.adb, makefile,
	  hload.out hload_sec.out:
	Regression test for heavy loaded server.

2004-08-11  Pascal Obry  <pascal@obry.org>

	* tres.adb:
	Properly serialize output.

2004-08-10  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sockext.adb, sockext_proc.adb, sockext_sec.adb, makefile,
	  sockext.out sockext_sec.out:
	Regression test for partial write.

2004-08-08  Pascal Obry  <pascal@obry.org>

	* test_speed.adb: